[tool.uv.workspace]
members = ["pybindings"]

[tool.uv]
dev-dependencies = [
    "pip >=25,<27",
    "maturin >=1.13.1,<2",
    "pytest >=8.3.3,<10",
    "ruff >=0.6.8,<1",
    "pre-commit >=4.1.0,<5",
    "mypy >=1.11.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
# Maturin is not the build system for the workspace (it is configured inside `pybindings`).
# We mirror the `pybindings/pyproject.toml` config here so `maturin develop` still works
# from the root of the workspace.
manifest-path = "pybindings/Cargo.toml"
module-name = "quizx"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[tool.ruff]
exclude = ["scratchpads"]
